styles.css
/* ... */
.u-button-hover {
  background-color: var(--clr-button-hover);
  color: var(--primary-text);
}

/* Text Hover Colors */
.u-text-hover-100 {
  color: var(--text-hover-100);
}

.u-text-hover-200 {
  color: var(--text-hover-200);
}

/* Utilities Classes for Typography */
/* Font family */
.u-head__ff {
  font-family: var(--heading-font);
}

.u-subhead__ff {
  font-family: var(--subheading-font);
}

.u-subhead__100 {
  font-family: var(--body-title);
}

.u-context__font {
  font-family: var(--body-context);
}

/* Font Size */
.u-head__size {
  font-size: var(--fs-heading);
}

.u-subhead__size {
  font-size: var(--fs-subheading);
}

.u-title__size {
  font-size: var(--fs-body-title);
}

.u-context__size {
  font-size: var(--fs-body-context);
}

/* Font Weight */
.u-head__weight {
  font-weight: var(--fw-heading);
}

.u-subhead__weight {
  font-weight: var(--fw-subheading);
}

.u-titile__weight {
  font-size: var(--fw--body-title);
}

.u-context__weight {
  font-size: var(--fw-body-context);
}

/* Line height */
.u-head__height {
  line-height: var(--ht-head);
}

.u-context__height {
  line-height: var(--ht-context);
}

/* Base spacing classes */
/* Utility Classes for Margins */
/* Margin for all four sides */
.l-m-100 {
  margin: 1rem;
}

.l-m-200 {
  margin: 1.5rem;
}

.l-m-300 {
  margin: 2rem;
}

/* margin for right, left, top and bottom separately */
/* Margin left */
.l-ml-100 {
  margin-left: 1rem;
}

.l-ml-200 {
  margin-left: 1.5rem;
}

.l-ml-300 {
  margin-left: 2rem;
}

/* Margin Right */
.l-mr-100 {
  margin-right: 1rem;
}

.l-mr-200 {
  margin-right: 1.5rem;
}

.l-mr-300 {
  margin-right: 2rem;
}

/* Margin Top */
.l-mt-100 {
  margin-top: 1rem;
}

.l-mt-200 {
  margin-top: 1.5rem;
}

.l-mt-300 {
  margin-top: 2rem;
}

.l-mt-400 {
  margin-top: 3.5rem;
}
.l-mt-500 {
  margin-top: 5.5rem;
}

/* Margin Bottom */
.l-mb-100 {
  margin-bottom: 1rem;
}

.l-mb-200 {
  margin-bottom: 1.5rem;
}

.l-mb-300 {
  margin-bottom: 2rem;
}

/* Margin X and Y axis */
/* Margin X-axis */
.l-mx-100 {
  margin-left: 1rem;
  margin-right: 1rem;
}

.l-mx-200 {
  margin-left: 2rem;
  margin-right: 2rem;
}

/* Margin Y-axis */
.l-my-100 {
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.l-my-200 {
  margin-top: 2rem;
  margin-bottom: 2rem;
}

/* Utility Classes for Padding */
/* Padding for all four sides */
.l-p-100 {
  padding: 1rem;
}

.l-p-200 {
  padding: 1.5rem;
}

.l-p-300 {
  padding: 2rem;
}
/* Padding for left, right, top and bottop separately */
/* Padding left */
.l-pl-100 {
  padding-left: 1rem;
}

.l-pl-200 {
  padding-left: 1.5rem;
}

.l-pl-300 {
  padding-left: 2rem;
}

/* Padding Right */
.l-pr-100 {
  padding-right: 1rem;
}

.l-pr-200 {
  padding-right: 1.5rem;
}

.l-pr-300 {
  padding-right: 2rem;
}

/* Padding Top */
.l-pt-100 {
  padding-top: 1rem;
}

.l-pt-200 {
  padding-top: 1.5rem;
}

.l-pt-300 {
  padding-top: 2rem;
}

/* Padding Bottom */
.l-pb-100 {
  padding-bottom: 1rem;
}

.l-pb-200 {
  padding-bottom: 1.5rem;
}

.l-pb-300 {
  padding-bottom: 2rem;
}
/* Padding X and Y axis */
/* Padding X-axis */
.l-px-100 {
  padding-left: 1rem;
  padding-right: 1rem;
}

.l-px-200 {
  padding-left: 2rem;
  padding-right: 2rem;
}

/* Padding Y-axis */
.l-py-100 {
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.l-py-200 {
  padding-top: 2rem;
  padding-bottom: 2rem;
}

/* Base layout classes */
/* Utility Classes for Flex layout */
/* Flexbox Layout */
.l-flex {
  display: flex;
}

/* Justify Content */
.l-justify-start {
  justify-content: flex-start;
}

.l-justify-end {
  justify-content: flex-end;
}

.l-justify-center {
  justify-content: center;
}

.l-justify-space-between {
  justify-content: space-between;
}

.l-justify-space-around {
  justify-content: space-around;
}

/* Align Items */
.l-align-start {
  align-items: flex-start;
}

.l-align-end {
  align-items: flex-end;
}

.l-align-center {
  align-items: center;
}

.l-align-baseline {
  align-items: baseline;
}

.l-align-stretch {
  align-items: stretch;
}

/* Flex Direction */
.l-flex-row {
  flex-direction: row;
}

.l-flex-row-reverse {
  flex-direction: row-reverse;
}

.l-flex-column {
  flex-direction: column;
}

.l-flex-column-reverse {
  flex-direction: column-reverse;
}
/* Container Class */
.c-container-head {
  max-width: 100%;
}

.c-continer-sidenav {
  max-width: 30%;
}

.c-container-content {
  max-width: fit-content;
}
/***** Outback Nursery Site *****/
/* Topnav */
.topnavbar {
  position: fixed;
  top: 0;
  width: 100%;
  display: flex;
  justify-content: space-between;
  overflow: hidden;
  z-index: 1000;
}
.topnavbar__link {
  text-decoration: none;
}
.hamburger-menu {
  display: block;
}
.bar {
  width: 25px;
  height: 3px;
  background-color: #fff;
  margin: 5px 0;
}
.topnav__links {
  display: none;
}
/* Hero section */
.hero__section {
  position: relative;
  height: 650px;
  background: url("images/japanese-maple-tree.jpg") center/cover no-repeat;
  color: white;
  text-align: center;
  display: flex;
  align-items: center;
  justify-content: center;
}
/* Style for the overlay */
.c-overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.591);
}
/* Style for the hero content */
.hero__content {
  z-index: 1;
}
/* Style for the call-to-action button */
.cta__button {
  border: none;
  cursor: pointer;
  text-decoration: none;
  transition: background-color 0.3s ease;
}
/* Hover effect for the button */
.cta__button:hover {
  background-color: var(--clr-button-hover);
}
/* Scroll animation for announcement section */
.l-announcement {
  position: fixed; /* Change to fixed */
  top: 0; /* Position at the top */
  left: 0;
  width: 100%;
  overflow-x: hidden; /* Hide overflow to prevent scrollbar */
  white-space: nowrap; /* Prevent text wrapping */
  z-index: 1000; /* Ensure it's above other content */
}
/* ... */

